RavenDB-16560 Low contrast/color issues on light theme

--- a/src/Raven.Studio/wwwroot/Content/css/pages/cluster-dashboard.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/cluster-dashboard.less
@@ -854,33 +854,35 @@
             text-align: center;
             line-height: 1.1em;
             padding: @gutter-xs @gutter-xxs;
-            background-color: @gray-700;
+            background-color: @well-bg;
             font-size: 13px;
             font-weight: bold;
         }
-        
+
         &.disabled {
-            opacity: 0.6;
+            filter: contrast(0.8) grayscale(1);
             cursor: not-allowed;
+            opacity: .9;
         }
-        
+
         &:not(.disabled) {
             &::before {
                 content: 'ADD';
                 display: block;
-                background-color: @text-color;
-                color: @panel-bg;
+                background-color: @white;
+                color: @gray-900;
                 border-radius: 40px;
                 text-align: center;
                 font-size: 14px;
-                padding: @gutter-xs @gutter-sm;
+                line-height: 1em;
+                padding: @gutter-xxs @gutter-sm;
                 font-weight: bold;
                 position: absolute;
                 top: 50%;
                 left: 50%;
                 transform: translateX(-50%) translatey(-50%) scale(.9);
                 opacity: 0;
-                transition: all .15s cubic-bezier(0, 0.5, 0.5, 1);
+                transition: all 0.5s cubic-bezier(0.4, 1.6, 0.6, 1);
             }
 
             &:hover {
