--- a/src/Raven.Studio/wwwroot/Content/css/styles-common.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles-common.less
@@ -1979,10 +1979,6 @@ ul.properties {
     }
 }
 
-.bg-experimental {
-    .bg-variant(@state-experimental-bg, @state-experimental-text);
-}
-
 .on-base-background {
     color: @on-base-background-color;
 
